Say so when the residency budget is below the working set
--gpu is a loss against not passing it in exactly one shape: a device
residency budget that cannot hold what the program keeps coming back to.
An evicted matrix is a first sight again on its next pass, so it is
declined to the CPU, uploaded on the pass after and evicted again, and
the loop alternates between the CPU's rate and a cold trip -- measured on
a 1.5 GB model forced to a 512 MB budget at 6.7 tok/s against --simd
alone's 7.7. Every counter that proves it was already inside
DeviceResidency and nothing read them, so the run was indistinguishable
from an ordinary slow one.

The signal is the RE-UPLOAD, not the eviction: a dead activation is
evicted and never asked for again, which is the lazy mode working as
designed. So an entry the LRU or the pool's pressure path lets go of
leaves its weak key behind, a put that finds its host there counts a
re-upload, and a write strikes the array out again -- a rewritten matrix
(the KV cache) is a fresh upload by design. The pre-flight's evictAll is
not counted: that is one call needing the whole device.

Gpu.residencyPressure() answers the line, or null while the budget holds,
once a whole budget's worth has gone up again. Gpu.reportResidencyPressure
registers one shutdown hook that prints it behind a caller's prefix, and
both interceptors ask for it with "--gpu: " -- LinalgGpu.hooks on the
interpreter, JvmGpuTemplate.gpuKernels on the compiled class, which has no
CLI to say it. The library stays silent for anyone who does not ask, and
no knob: the budget stays derived, and the surface comes first.

Verified on the GB10 with stories15M (60 MB of weights) through
ResidencyCliff, which now drives both halves and announces the budget in
force: interpreter 33.8 tok/s silent at the derived budget, 22.2 with the
line at 48 MB; JVM class output 369.9 and 188.2.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/sessio